[package]
name = "mortgage-cal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.10", features = ["derive"] }
decimal = "2.1.0"
rust_decimal = "1.26"
rust_decimal_macros = "1.26"
pager = "0.16.1"
toml = "0.5.9"
serde = { version = "1.0.145", features = [] }
serde_derive = "1.0.145"
anyhow = "1.0.65"
